// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Pager background 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager background 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager background 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager background 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager className 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text my-classname uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 1`] = `
<Row
  className="color-schema-default uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 2`] = `
<Row
  className="color-schema-red uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 3`] = `
<Row
  className="color-schema-red uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 4`] = `
<Row
  className="color-schema-red-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 5`] = `
<Row
  className="color-schema-red-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 6`] = `
<Row
  className="color-schema-green uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 7`] = `
<Row
  className="color-schema-green uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 8`] = `
<Row
  className="color-schema-green-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 9`] = `
<Row
  className="color-schema-green-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 10`] = `
<Row
  className="color-schema-yellow uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 11`] = `
<Row
  className="color-schema-yellow uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 12`] = `
<Row
  className="color-schema-yellow-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 13`] = `
<Row
  className="color-schema-yellow-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 14`] = `
<Row
  className="color-schema-purple uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 15`] = `
<Row
  className="color-schema-purple uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 16`] = `
<Row
  className="color-schema-purple-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 17`] = `
<Row
  className="color-schema-purple-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 18`] = `
<Row
  className="color-schema-brown uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 19`] = `
<Row
  className="color-schema-brown uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 20`] = `
<Row
  className="color-schema-brown-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 21`] = `
<Row
  className="color-schema-brown-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 22`] = `
<Row
  className="color-schema-orange uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 23`] = `
<Row
  className="color-schema-orange uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 24`] = `
<Row
  className="color-schema-orange-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 25`] = `
<Row
  className="color-schema-orange-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 26`] = `
<Row
  className="color-schema-cyan uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 27`] = `
<Row
  className="color-schema-cyan uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 28`] = `
<Row
  className="color-schema-cyan-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 29`] = `
<Row
  className="color-schema-cyan-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 30`] = `
<Row
  className="color-schema-grey uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 31`] = `
<Row
  className="color-schema-grey uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 32`] = `
<Row
  className="color-schema-grey-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 33`] = `
<Row
  className="color-schema-grey-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 34`] = `
<Row
  className="color-schema-pink uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 35`] = `
<Row
  className="color-schema-pink uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 36`] = `
<Row
  className="color-schema-pink-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 37`] = `
<Row
  className="color-schema-pink-rich uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager colorSchema 38`] = `
<Row
  className="color-schema-pink uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager controlled 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager controlled 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager controlled 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager controlled 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager default props 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager disabled 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={true}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager disabled 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager disabled 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager disabled 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={true}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager docKit examples UU5.Bricks.Pager should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    className={null}
    colWidth="xs12 s4 m4"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header="Links"
    hidden={false}
    id="uuID2"
    ignoreInnerHTML={false}
    key="uuID2"
    level="3"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
    width={null}
  >
    <Pager
      background={false}
      bgStyle={null}
      borderRadius={null}
      className={null}
      colorSchema={null}
      controlled={true}
      disabled={false}
      downLink={null}
      hidden={false}
      id="uuID3"
      leftLink={
        Object {
          "href": "#",
          "icon": "mdi-arrow-left",
          "text": "previous",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      rightLink={null}
      selected={false}
      size="m"
      style={null}
      tooltip={null}
      upLink={null}
    />
    <Pager
      background={false}
      bgStyle={null}
      borderRadius={null}
      className={null}
      colorSchema={null}
      controlled={true}
      disabled={false}
      downLink={null}
      hidden={false}
      id="uuID4"
      leftLink={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      rightLink={
        Object {
          "href": "#",
          "icon": "mdi-arrow-right",
          "text": "next",
        }
      }
      selected={false}
      size="m"
      style={null}
      tooltip={null}
      upLink={null}
    />
    <Pager
      background={false}
      bgStyle={null}
      borderRadius={null}
      className={null}
      colorSchema={null}
      controlled={true}
      disabled={false}
      downLink={null}
      hidden={false}
      id="uuID5"
      leftLink={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      rightLink={null}
      selected={false}
      size="m"
      style={null}
      tooltip={null}
      upLink={
        Object {
          "href": "#",
          "icon": "mdi-arrow-up",
          "text": "up",
        }
      }
    />
    <Pager
      background={false}
      bgStyle={null}
      borderRadius={null}
      className={null}
      colorSchema={null}
      controlled={true}
      disabled={false}
      downLink={
        Object {
          "href": "#",
          "icon": "mdi-arrow-down",
          "text": "down",
        }
      }
      hidden={false}
      id="uuID6"
      leftLink={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      rightLink={null}
      selected={false}
      size="m"
      style={null}
      tooltip={null}
      upLink={null}
    />
  </Column>
</div>
`;

exports[`UU5.Bricks.Pager downLink 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
>
  <Button
    baseline={false}
    bgStyle="transparent"
    borderRadius={null}
    className=" uu5-bricks-pager-link"
    colorSchema={null}
    content={
      Array [
        <Span
          className="uu5-bricks-pager-text"
          content="Dolů"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />,
        <Icon
          authenticate={false}
          className="uu5-bricks-pager-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="uu5-plus"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
      ]
    }
    controlled={true}
    disabled={false}
    displayBlock={false}
    dynamic={false}
    elevation={null}
    elevationHover={null}
    hidden={false}
    href="#downlink"
    icon="uu5-plus"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    pressed={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    smoothScroll={1000}
    style={null}
    target="_self"
    text="Dolů"
    tooltip={null}
  />
</Row>
`;

exports[`UU5.Bricks.Pager hidden 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager hidden 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager hidden 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager hidden 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={true}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager id 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="myId-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager leftLink 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
>
  <Button
    baseline={false}
    bgStyle="transparent"
    borderRadius={null}
    className=" uu5-bricks-pager-link"
    colorSchema={null}
    content={
      Array [
        <Icon
          authenticate={false}
          className="uu5-bricks-pager-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="uu5-plus"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
        <Span
          className="uu5-bricks-pager-text"
          content="Předchozí článek"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />,
      ]
    }
    controlled={true}
    disabled={false}
    displayBlock={false}
    dynamic={false}
    elevation={null}
    elevationHover={null}
    hidden={false}
    href="#leftlink"
    icon="uu5-plus"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    pressed={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    smoothScroll={1000}
    style={null}
    target="_self"
    text="Předchozí článek"
    tooltip={null}
  />
</Row>
`;

exports[`UU5.Bricks.Pager mainAttrs 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager name 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name="myName-inner"
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 5`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 6`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 7`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 8`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 9`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 10`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 11`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 12`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 13`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 14`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="box"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 15`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 16`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 17`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 18`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 19`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager nestingLevel 20`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel={null}
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager noIndex 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-noindex uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager noIndex 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager noIndex 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager noIndex 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-noindex uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager pureRender 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager pureRender 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager pureRender 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager pureRender 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={true}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager rightLink 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
>
  <Button
    baseline={false}
    bgStyle="transparent"
    borderRadius={null}
    className=" uu5-bricks-pager-link"
    colorSchema={null}
    content={
      Array [
        <Span
          className="uu5-bricks-pager-text"
          content="Další článek"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />,
        <Icon
          authenticate={false}
          className="uu5-bricks-pager-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="uu5-plus"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
      ]
    }
    controlled={true}
    disabled={false}
    displayBlock={false}
    dynamic={false}
    elevation={null}
    elevationHover={null}
    hidden={false}
    href="#rightlink"
    icon="uu5-plus"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    pressed={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    smoothScroll={1000}
    style={null}
    target="_self"
    text="Další článek"
    tooltip={null}
  />
</Row>
`;

exports[`UU5.Bricks.Pager selected 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager selected 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager selected 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager selected 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager size 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-s"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager size 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager size 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager size 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-l"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager size 5`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-l"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager size 6`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-xl"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager size 7`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-xl"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager size 8`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-l"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager style 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager style 2`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager style 3`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager style 4`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager tooltip 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip="My Tooltip"
  underline={false}
/>
`;

exports[`UU5.Bricks.Pager upLink 1`] = `
<Row
  className="uu5-bricks-pager uu5-common-text uu5-bricks-pager-size-m"
  content={null}
  controlled={true}
  disabled={false}
  display="standard"
  dynamic={false}
  footer={null}
  header={null}
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  noSpacing={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
  underline={false}
>
  <Button
    baseline={false}
    bgStyle="transparent"
    borderRadius={null}
    className=" uu5-bricks-pager-link"
    colorSchema={null}
    content={
      Array [
        <Icon
          authenticate={false}
          className="uu5-bricks-pager-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="uu5-plus"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
        <Span
          className="uu5-bricks-pager-text"
          content="Nahoru"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id={null}
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        />,
      ]
    }
    controlled={true}
    disabled={false}
    displayBlock={false}
    dynamic={false}
    elevation={null}
    elevationHover={null}
    hidden={false}
    href="#uplink"
    icon="uu5-plus"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    pressed={false}
    pureRender={false}
    ref_={null}
    selected={false}
    size="m"
    smoothScroll={1000}
    style={null}
    target="_self"
    text="Nahoru"
    tooltip={null}
  />
</Row>
`;
